--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
-<html>
-<head>
-<title>Tampa Hackerspace Github Projects</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <meta name="description" content="Tampa Hackerspace Github Projects">
+    <meta name="keywords" content="tampa hackerspace, tampa, arduino, 3d printing, slack">
+    <title>Tampa Hackerspace Github Projects</title>
+
+<style>
+body {
+  background-color: #202020;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 20px;
+  font: 16px 'Open Sans', serif;
+  color: white;
+}
+a:link, a:visited {
+  color: #d0e0ff;
+}
+div.about {
+  background-color: rgba(0,0,0,0.5); 
+  padding: 20px;
+  line-height: 1.4;
+  border: 2px solid rgba(0,0,0,0.55);
+}
+img.profile {
+
+}
+</style>
 </head>
 <body>
-<div>Visit our <a href="http://tampahackerspace.com">website</a> to learn more.</div>
-<div><img src="logo.png"></div>
+  <div class="hidden-xs col-sm-2 col-md-offset-1"><img width="100%" class="profile" src="logo.png" /></div>
+  <div class="about col-xs-12 col-sm-10 col-md-8">
+    <p>This is a collection of <a href="https://github.com/TampaHackerspace">some projects</a> around <a href="http://tampahackerspace.com">Tampa Hackerspace</a>.</p>
+  </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
+
